--- a/web/TestChat/TestChat/httpchat_index.html
+++ b/web/TestChat/TestChat/httpchat_index.html
@@ -9,7 +9,7 @@
 	<div id ="chat-window">
 		<div id ="chat-banner">
 			<h1> HTTP chat! </h1>
-			<span>( naciśnij ENTER , by wysłać wiadomość)</span>
+			<span>( Press ENTER , to send message)</span>
 		</div>
 		<div id = "chat-text"></div>
 		<div id = "chat-input-window">	
@@ -18,5 +18,5 @@
 	</div>   	
 	</body>	
 	<script src ="//code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="/main.js></script>
-	</html>
+	<script src="/main.js"></script>
+</html>
